# mono

./: .gitignore  .prettierrc  Cargo.toml  README.md  components.json  electron-builder.json  eslint.config.js  index.html  install.sh  package-lock.json  package.json  tracker-bin  tsconfig.app.json  tsconfig.node.json  types.d.ts  uninstall.sh  vite.config.ts
screen-time-tracker/: Cargo.toml
screen-time-tracker/src/: autostart.rs  lib.rs  main.rs  models.rs  session_manager.rs  storage.rs
src/: autostart.rs  ipc_server.rs  lib.rs  main.rs  models.rs  session_manager.rs  shutdown_handler.rs  storage.rs  tracker.rs  window_manager.rs
src/components/ui/: button.tsx
src/electron/: main.ts  pathResolver.ts  preload.cts  test.ts  tsconfig.json  util.ts
src/tui/: consent.rs  db.rs  main.rs
src/ui/: App.css  App.tsx  main.tsx
src/window_managers/: generic_wayland.rs  gnome.rs  hyprland.rs  kde.rs  mod.rs  sway.rs  x11.rs
tests/: consent.rs
