[package]
name = "mono"
version = "0.2.0"
edition = "2021"
description = "Screen time tracking with TUI dashboard"

[[bin]]
name = "mono"
path = "src/tui/main.rs"

[[bin]]
name = "mono-daemon"
path = "src/main.rs"

[lib]
name = "mono"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.31", features = ["bundled"] }
actix-web = "4"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
x11 = { version = "2.21", features = ["xlib", "xss"] }
sysinfo = "0.32"
dirs = "5.0"
which = "6.0"
parking_lot = "0.12"
ctrlc = "3.4"
uuid = { version = "1", features = ["v4"] }
ratatui = "0.29"
crossterm = "0.28"
